--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ six==1.16.0
 spotipy==2.22.1
 urllib3==1.26.14
 Werkzeug==2.2.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
+idna==3.4
+requests==2.28.2
+urllib3==1.26.14
